# UM-CPS1011-MixedStack

./: README.md
Task1/: 1a.c  1b.c  1c.c  CMakeLists.txt
Task2/: 2a.c  2b.c  CMakeLists.txt  MixedStack_t.c  MixedStack_t.h  MixedStack_t_0.c  MixedStack_t_0.h
